2007-03-24  Benoit Jacob <jacob@math.jussieu.fr>

	* include/openbabel/atom.h, src/atom.cpp: Change SetVector to
	const parameter.

2007-03-23  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* data/psa.txt, data/mr.txt, data/logp.txt: Small changes -- DOS
	to UNIX line endings. 

	* test/Makefile.am, test/Makefile.in: Make sure to add inchiwrite
	to compile list.

	* test/wrapper.sh: Add notes on passing arguments to "prove."

	* tools/obprop.cpp: Fix formatting problems - PR#1685879, reported
	by Tapani Kinnunen.

	* src/formats/mol2format.cpp: Add new -xl flag to output "ligand
	only" data (i.e., no residue info). Fixes PR#1683788.

	* src/formats/smilesformat.cpp: Fix PR#1680070 with output of
	chiral root (first) atoms. Really need to clean up BuildTree()
	since that if() statement is messy, but works for 2.1 release.

2007-03-23  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* data/psa.txt: Added ";heavy", fixes the logp_psa test.

	* tools/obprop.cpp: Function string sequence(OBMol) was not returning
	any string.

2007-03-22  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/forcefield.cpp: When determining length, if two atoms are
	really close, add a small random separation (~0.1Ang). Fixed
	PR#1684479.

2007-03-22 Chris Morley

	* windows-vc2005: Simplified projects to OpenBabelDLL with driver
	programs for commandline, GUI, and Python interface.

	* include/openbabel/forcefield.h: So that the Python build
	in Windows will work, added a dummy function so that the 
	compiler will really make some functions of the templated class
	OBIter<OBForceField> which SWIG is expecting. The needs to be
	done properly, but needed to get it working for the 2.1 release. 
	
	* include/openbabel/obconversion.h and src/obconversion.cpp:
	added the patches supplied by Jerome Pansanel for providing a
	list of available formats.
	
2007-03-20 Chris Morley

	* src/formats/xml/cmlformat.cpp: Add code to write W and H in